Development Portal (2020-02-29 shi)
==============================
Cleanup result groupings
Display location-id, feature
Display all transaction lengths
Display all result lengths
Fix transaction legend to only show when type is available
Cleanup indicator tables
Add empty descriptions for result elements
Update result groupings and header colours
Use different chunk when result reference is not available
Display location ref, vocab and update css for description
Update table widths and font size for related-activity
Display result main titles
Display achieved percentage as color indicators
Update new savi examples
Display glossary for results


Development Portal (2020-02-28 shi)
==============================
Display indicator document-link
Move activity status close to dates
Display indicator measure


Development Portal (2020-02-11 shi)
==============================
Update css for transaction, budget and planned disbursement tables


Development Portal (2020-02-10 shi)
==============================
Display transaction charts
Display legend
Import chartist css
Update css for charts and legends
Display budget and planned disbursement charts
Update colours for charts
Update result table
Add line break to currency in charts
Add all legends


Development Portal (2020-02-09 shi)
==============================
Fix sector icons for freetext search dropdown
Update new SAVi elements css and layout
Display first narratives
Update css for links and activity dates
Display humanitarian for transactions
Clean up new SAVi css
Display @budget-not-provided
Update result section


Development Portal (2020-02-08 shi)
==============================
Add crs-add
Display crs-add elements
Update css for new elements
Removed text bracket from crs channel-code
Fix whitespace crs loan status
Display all elements under transaction
Display withdrawn status
Update ref link for participating-org
Display crs for participating-org


Development Portal (2020-02-07 shi)