@@ -344,10 +344,10 @@ table.budget.act_trans td.date				{width:110px; padding-right:0px;}
 .wrap_result td.result_percent				{font-size:14px;}
 .wrap_result th.result_period,
 .wrap_result td.result_period				{width:150px;}
-.wrap_result td.result_period				{font-size:11px;}
+.wrap_result td.result_period				{font-size:11px; line-height:20px; text-align:center;}
 .result_indicator							{display:inline-block; vertical-align:top; width:25%;}
 .result_indicator.left_indi					{width:75%; padding-right:25px;}
-.wrap_result_indicator_title				{margin-bottom:5px;}
+.wrap_result_indicator_title				{margin-bottom:10px;}
 .result_main_title							{padding:20px 0; font-size:18px; line-height:24px;}
 .result_separator							{background-color:#47506b; width:960px; height:10px; margin-left:-40px;}
 .wrap_result_table .wrap_result_indicator:last-of-type .result_separator:last-of-type	{display:none;}
@@ -371,16 +371,17 @@ table.budget.act_trans td.date				{width:110px; padding-right:0px;}
 .result_indicator span.doc_date				{font-size:11px;}
 .wrap_result .sector_list_wrap				{color:#ccc; padding:0 0 10px 0;}
 .wrap_result .header.glossary				{margin-bottom:10px;}
-.wrap_result td.result_base .result_indi_measure,
-.wrap_result td.result_target .result_indi_measure,
-.wrap_result td.result_actual .result_indi_measure	{color:#ccc; font-size:11px; text-transform:uppercase;}
-.wrap_result table.budget td				{vertical-align:middle;}
+.wrap_result table.budget td				{vertical-align:middle; padding:5px 0;}
+.wrap_result table.budget tr.row_measure td	{color:#ccc; font-size:11px; text-transform:uppercase; padding:5px 0;}
 .result_facet								{padding-bottom:5px;}
 .result_facet:first-of-type					{padding-bottom:0;}
 .result_empty								{font-size:12px; color:#ccc;}
 .result_percent_wrap,
 .result_percent_wrap .result_empty			{display:inline;}
 .result_percent_wrap span					{display:inline-block; width:10px; height:10px; border-radius:20px; margin-left:10px;}
+.result_date_bar							{position:relative; background-color:#000; height:20px; max-height:20px;}
+.result_date_overlay						{background-color:#483f23; height:20px; max-height:20px;}
+.result_date								{position:absolute; top:0px; left:0; width:150px;}
 
 /*	IATI ACTIVITY POLICY MARKER TABLE	*/
 .wrap_policy_marker table.budget th.policy_code,
