@@ -1,3 +1,8 @@
+Development Portal (2020-03-05 shi)
+==============================
+Display @measure and date bars in results
+
+
 Development Portal (2020-02-29 shi)
 ==============================
 Cleanup result groupings
